--- a/site-reliability-engineer.html
+++ b/site-reliability-engineer.html
@@ -60,11 +60,11 @@
 <p><span class="badge badge-light">Munich Munich M?nchen</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/OteemoInc/743999698292259-sr-site-reliability-engineer-devsecops'>Oteemo, Inc Sr. Site Reliability Engineer, DevSecOps | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/OteemoInc/743999698292259-sr-site-reliability-engineer-devsecops'>Oteemo, Inc Sr. Site Reliability Engineer, DevSecOps | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/blizzard/job/opinbfwZ'>Blizzard Entertainment Careers - Manager, Site Reliability Engineering</a></h5> 
+<h5><a href='https://jobs.jobvite.com/blizzard/job/opinbfwZ'>Blizzard Entertainment Careers - Manager, Site Reliability Engineering</a></h5> 
 <p><span class="badge badge-light">Irvine, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -78,7 +78,7 @@
 <p><span class="badge badge-light">Singapore Philippines  Singapore Philippines Singapore  Singapore Berlin</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qer9Vfwt&k=Job&j=o377afwb&__jvst=Employee&__jvsd=s1TiViwU&__jvsc=Twitter&bid=n8ZtlMwc'>Smarsh Careers - Site Reliability Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qer9Vfwt&k=Job&j=o377afwb&__jvst=Employee&__jvsd=s1TiViwU&__jvsc=Twitter&bid=n8ZtlMwc'>Smarsh Careers - Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light">Portland, Oregon  Atlanta, Georgia</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
@@ -90,7 +90,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qer9Vfwt&k=Job&j=o377afwb&__jvst=Employee&__jvsd=sIMG2hwY&__jvsc=Twitter&bid=navqlMwH'>Smarsh Careers - Site Reliability Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qer9Vfwt&k=Job&j=o377afwb&__jvst=Employee&__jvsd=sIMG2hwY&__jvsc=Twitter&bid=navqlMwH'>Smarsh Careers - Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light">Portland, Oregon  Atlanta, Georgia</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
@@ -118,7 +118,7 @@
 <p><span class="badge badge-light">Berlin Berlin, Germany  Berlin</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/couchbase/1953249b-4880-4002-80da-598ef1efa6a1'>Couchbase - Lead Site Reliability Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/couchbase/1953249b-4880-4002-80da-598ef1efa6a1'>Couchbase - Lead Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light">Santa Clara, California</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
@@ -174,7 +174,7 @@
 <p><span class="badge badge-light">Pittsburgh</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/OteemoInc/743999697980374-sr-site-reliability-engineer-devsecops'>Oteemo, Inc Sr. Site Reliability Engineer, DevSecOps | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/OteemoInc/743999697980374-sr-site-reliability-engineer-devsecops'>Oteemo, Inc Sr. Site Reliability Engineer, DevSecOps | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -192,7 +192,7 @@
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<h5><a href='https://careers.jobscore.com/careers/altsrc/jobs/principal-site-reliability-engineer-c4Tmce2wur6B16aKjNoogA'>Principal Site Reliability Engineer #0168 job at AltSource in Portland, OR, powered by JobScore</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/altsrc/jobs/principal-site-reliability-engineer-c4Tmce2wur6B16aKjNoogA'>Principal Site Reliability Engineer #0168 job at AltSource in Portland, OR, powered by JobScore</a></h5> 
 <p><span class="badge badge-light">Portland, ORPortland, OR</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -237,11 +237,11 @@ customer experience, and increase the overall value of supported applications.</
 <p><span class="badge badge-light">San Mateo, California  San Mateo</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/smartsheet/jobs/1925787'>Job Application for Senior Site Reliability Engineer - Network at Smartsheet</a></h5> 
+<h5><a href='https://boards.greenhouse.io/smartsheet/jobs/1925787'>Job Application for Senior Site Reliability Engineer - Network at Smartsheet</a></h5> 
 <p><span class="badge badge-light">Bellevue, WA</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qomaVfwz&k=Job&j=oTfVafwX&__jvst=Employee&__jvsd=sQC4fiwy&__jvsc=Twitter&bid=nmdUgMw0&jvi=oTfVafwX,Job&jvk=Job'>Blizzard Entertainment Careers - Site Reliability Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qomaVfwz&k=Job&j=oTfVafwX&__jvst=Employee&__jvsd=sQC4fiwy&__jvsc=Twitter&bid=nmdUgMw0&jvi=oTfVafwX,Job&jvk=Job'>Blizzard Entertainment Careers - Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light">Irvine, CA</span></p>
 <p>Posted on:: 2019-10-22</p>
 <hr/>
@@ -358,7 +358,7 @@ Linux experience, network knowledge, scripting abilities, information security a
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/algorithmia/jobs/4477002002?gh_jid=4477002002'>Job Application for Site Reliability Engineer at Algorithmia</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/algorithmia/jobs/4477002002?gh_jid=4477002002'>Job Application for Site Reliability Engineer at Algorithmia</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 10, 2019 ... Already trusted by over 100k developers and major enterprise customers, 
 Algorithmia makes scalable Machine Learning fast, simple, and cost-effective for
@@ -408,11 +408,11 @@ Algorithmia makes scalable Machine Learning fast, simple, and cost-effective for
 <p><span class="badge badge-light">Portland, ORPortland, OR</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/farfetch/job/oD5mbfwZ'>Farfetch Careers - Site Reliability Engineering Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/farfetch/job/oD5mbfwZ'>Farfetch Careers - Site Reliability Engineering Manager</a></h5> 
 <p><span class="badge badge-light">Porto, Portugal</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/farfetch/job/ow5mbfwS'>Farfetch Careers - Site Reliability Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/farfetch/job/ow5mbfwS'>Farfetch Careers - Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light">Porto, Portugal</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
@@ -436,7 +436,7 @@ Algorithmia makes scalable Machine Learning fast, simple, and cost-effective for
 <p><span class="badge badge-light">Bengaluru  Bangalore Jakarta</span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/digitalonus/jobs/4479789002'>Job Application for Site Reliability Engineers  at Digital On Us</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/digitalonus/jobs/4479789002'>Job Application for Site Reliability Engineers  at Digital On Us</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
